# ascii-processing-unit

./: .gitignore  APU-DESIGN.md  APU-PROTOCOL.md  APU-README.md  ARCHITECTURE.md  CHANGELOG.mac.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  WEB_TELNET_CLIENT.md  WIDGETS-DESIGN.md  creation_of_GUI.md  mouse.md  package.json  terminal_readme.md  test_apu.sh  test_input.sh
apps/calculator/: app.cjs  icon.txt  manifest.json
apps/macpaint/: app.cjs  icon.txt  manifest.json
apps/macwrite/: app.cjs  icon.txt  manifest.json
apps/puzzle/: app.cjs  manifest.json
apps/terminal/: app.cjs  icon.txt  manifest.json
demos/: mac1984-finder.cjs  mac1984-stable.cjs  mac1984.cjs  win31.cjs
examples/: hello.js  windows.js
gui-server/: app-loader.cjs  desktop.cjs  server.cjs  session.cjs  vfs.cjs
src/: input.rs  lib.rs  main.rs  protocol.rs  server.rs  terminal.rs
src/core/: cell.rs  grid.rs  mod.rs  window.rs
src/renderer/: ansi_ibm.rs  mod.rs
